--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	implementation 'com.h2database:h2:2.2.224'
 
 	//Caffeine 캐시
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
