--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,22 @@
 spring:
   profiles:
+    active: local
     include: SECRET-KEY
+
+#  datasource:
+#    url: jdbc:h2:tcp://localhost/~/footballinfo
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        # show_sql: true
+        format_sql: true
+        use_sql_comments: true
 
   cache:
     type: caffeine
@@ -9,3 +25,4 @@ spring:
 
 logging.level:
   org.hibernate.SQL: debug
+#  org.hibernate.type: trace
